[project]
name = "backend"
version = "0.1.0"
description = "backend using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
backend = "backend.main:run"
run_crew = "backend.main:run"
train = "backend.main:train"
replay = "backend.main:replay"
test = "backend.main:test"
run_with_trigger = "backend.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
